refactoring code byadding smallerfuncitons

--- a/Password_Generator/style.css
+++ b/Password_Generator/style.css
@@ -135,3 +135,9 @@ button[disabled] {
     font-size: 0.8rem;
   }
 }
+
+.checkBox {
+  display: flex;
+  margin-left: 30%;
+  justify-content: flex-start;
+}
